hide homepage on mobile, fix navigation menu position mobile

--- a/components/ProjectPage/ProjectPage.module.scss
+++ b/components/ProjectPage/ProjectPage.module.scss
@@ -133,6 +133,7 @@
 
 .projects_navigation_menu {
     position: absolute;
+    top: 0;
     background-color: white;
     width: 100%;
     height: 100%;
