--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -26,6 +26,7 @@
     }
 
     @include media('small') {
+        display: none;
         grid-template-columns: 2fr 1fr;
         grid-template-rows: 1fr 5fr 1fr 1fr;
         grid-template-areas: 
